inference and evaluation are added

--- a/run_experiment.ipynb
+++ b/run_experiment.ipynb
@@ -193,7 +193,16 @@
     "config['input_features_dim'] = 3 + len(FEATURES)\n",
     "\n",
     "\"\"\"Specifying cross-validation split\"\"\"\n",
-    "kf = KFold(n_splits=5, shuffle=True, random_state=42)"
+    "kf = KFold(n_splits=5, shuffle=True, random_state=42)\n",
+    "\n",
+    "\"\"\"Adding dictionaries for noramlization\"\"\"\n",
+    "MEANS, STDS = {}, {}\n",
+    "for feature in FEATURES:\n",
+    "    MEANS[feature] = 0\n",
+    "    STDS[feature] = 1  \n",
+    "    \n",
+    "config['MEANS'] = MEANS\n",
+    "config['STDS'] = STDS"
    ]
   },
   {
