interpolation, evaluation, dataset creation

--- a/run_inference.ipynb
+++ b/run_inference.ipynb
@@ -42,12 +42,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "e9857bf2-548d-4224-bbac-c4cb10a26c3d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "EXP_NAME = '1b5fabcd-9b11-4188-b193-1e0c052ba0f4'\n",
+    "EXP_NAME = 'deeb6bb3-7c65-47b8-92d0-53737d47d983'\n",
     "\n",
     "with open(f'experiments/{EXP_NAME}/config.json') as json_file:\n",
     "    config = json.load(json_file)\n",
@@ -62,15 +62,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "45e32507-03c2-47ca-b959-ff2e18beb840",
    "metadata": {},
    "outputs": [],
    "source": [
     "all_data_dict = {}\n",
     "for feature in config.FEATURES:\n",
-    "    all_data_dict[feature] = [f\"{config.path_to_data}/{feature}/{subject}.npy\" for subject in config.subjects]\n",
-    "all_data_dict['labels'] = [f\"{config.path_to_data}/labels/{subject}.npy\" for subject in config.subjects]"
+    "    all_data_dict[feature] = [f\"{config.path_to_data}/{config.BRAIN_MODALITY}_{feature}/{subject}.nii\" for subject in config.subjects]\n",
+    "all_data_dict['labels'] = [f\"{config.path_to_data}/labels/{subject}.nii\" for subject in config.subjects]"
    ]
   },
   {
@@ -83,7 +83,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
+   "id": "c652230c-9a4e-490e-92f3-1dc9ebda4817",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DEVICE = 1\n",
+    "torch.cuda.set_device(f\"cuda:{DEVICE}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "799efc01-3587-43b6-93b3-c08a52547181",
    "metadata": {
     "tags": []
@@ -94,103 +105,89 @@
      "output_type": "stream",
      "text": [
       "  0%|          | 0/5 [00:00<?, ?it/s]\n",
-      "  0%|          | 0/17 [00:00<?, ?it/s]\u001b[A\n",
-      "  6%|▌         | 1/17 [00:14<03:49, 14.37s/it]\u001b[A\n",
-      " 12%|█▏        | 2/17 [00:28<03:37, 14.50s/it]\u001b[A\n",
-      " 18%|█▊        | 3/17 [00:43<03:23, 14.52s/it]\u001b[A\n",
-      " 24%|██▎       | 4/17 [00:58<03:08, 14.53s/it]\u001b[A\n",
-      " 29%|██▉       | 5/17 [01:12<02:54, 14.50s/it]\u001b[A\n",
-      " 35%|███▌      | 6/17 [01:27<02:39, 14.54s/it]\u001b[A\n",
-      " 41%|████      | 7/17 [01:41<02:25, 14.57s/it]\u001b[A\n",
-      " 47%|████▋     | 8/17 [01:56<02:11, 14.59s/it]\u001b[A\n",
-      " 53%|█████▎    | 9/17 [02:10<01:56, 14.55s/it]\u001b[A\n",
-      " 59%|█████▉    | 10/17 [02:25<01:41, 14.55s/it]\u001b[A\n",
-      " 65%|██████▍   | 11/17 [02:39<01:27, 14.55s/it]\u001b[A\n",
-      " 71%|███████   | 12/17 [02:54<01:12, 14.54s/it]\u001b[A\n",
-      " 76%|███████▋  | 13/17 [03:09<00:58, 14.56s/it]\u001b[A\n",
-      " 82%|████████▏ | 14/17 [03:23<00:43, 14.56s/it]\u001b[A\n",
-      " 88%|████████▊ | 15/17 [03:38<00:29, 14.58s/it]\u001b[A\n",
-      " 94%|█████████▍| 16/17 [03:53<00:14, 14.59s/it]\u001b[A\n",
-      "100%|██████████| 17/17 [04:08<00:00, 14.60s/it]\u001b[A\n",
-      " 20%|██        | 1/5 [04:48<19:15, 288.86s/it]\n",
       "  0%|          | 0/16 [00:00<?, ?it/s]\u001b[A\n",
-      "  6%|▋         | 1/16 [00:14<03:38, 14.56s/it]\u001b[A\n",
-      " 12%|█▎        | 2/16 [00:29<03:23, 14.55s/it]\u001b[A\n",
-      " 19%|█▉        | 3/16 [00:43<03:09, 14.60s/it]\u001b[A\n",
-      " 25%|██▌       | 4/16 [00:59<02:59, 14.98s/it]\u001b[A\n",
-      " 31%|███▏      | 5/16 [01:14<02:44, 14.94s/it]\u001b[A\n",
-      " 38%|███▊      | 6/16 [01:29<02:28, 14.88s/it]\u001b[A\n",
-      " 44%|████▍     | 7/16 [01:43<02:13, 14.85s/it]\u001b[A\n",
-      " 50%|█████     | 8/16 [01:58<01:58, 14.79s/it]\u001b[A\n",
-      " 56%|█████▋    | 9/16 [02:13<01:43, 14.78s/it]\u001b[A\n",
-      " 62%|██████▎   | 10/16 [02:27<01:28, 14.78s/it]\u001b[A\n",
-      " 69%|██████▉   | 11/16 [02:42<01:13, 14.76s/it]\u001b[A\n",
-      " 75%|███████▌  | 12/16 [02:57<00:59, 14.76s/it]\u001b[A\n",
-      " 81%|████████▏ | 13/16 [03:11<00:44, 14.75s/it]\u001b[A\n",
-      " 88%|████████▊ | 14/16 [03:26<00:29, 14.73s/it]\u001b[A\n",
-      " 94%|█████████▍| 15/16 [03:41<00:14, 14.73s/it]\u001b[A\n",
-      "100%|██████████| 16/16 [03:55<00:00, 14.74s/it]\u001b[A\n",
-      " 40%|████      | 2/5 [09:19<13:59, 279.68s/it]\n",
+      "  6%|▋         | 1/16 [00:15<03:53, 15.55s/it]\u001b[A\n",
+      " 12%|█▎        | 2/16 [00:31<03:37, 15.51s/it]\u001b[A\n",
+      " 19%|█▉        | 3/16 [00:46<03:21, 15.51s/it]\u001b[A\n",
+      " 25%|██▌       | 4/16 [01:02<03:06, 15.50s/it]\u001b[A\n",
+      " 31%|███▏      | 5/16 [01:17<02:50, 15.50s/it]\u001b[A\n",
+      " 38%|███▊      | 6/16 [01:33<02:35, 15.51s/it]\u001b[A\n",
+      " 44%|████▍     | 7/16 [01:48<02:19, 15.53s/it]\u001b[A\n",
+      " 50%|█████     | 8/16 [02:04<02:04, 15.55s/it]\u001b[A\n",
+      " 56%|█████▋    | 9/16 [02:20<01:48, 15.56s/it]\u001b[A\n",
+      " 62%|██████▎   | 10/16 [02:35<01:33, 15.54s/it]\u001b[A\n",
+      " 69%|██████▉   | 11/16 [02:50<01:17, 15.53s/it]\u001b[A\n",
+      " 75%|███████▌  | 12/16 [03:06<01:02, 15.55s/it]\u001b[A\n",
+      " 81%|████████▏ | 13/16 [03:21<00:46, 15.52s/it]\u001b[A\n",
+      " 88%|████████▊ | 14/16 [03:37<00:31, 15.54s/it]\u001b[A\n",
+      " 94%|█████████▍| 15/16 [03:53<00:15, 15.53s/it]\u001b[A\n",
+      "100%|██████████| 16/16 [04:08<00:00, 15.55s/it]\u001b[A\n",
+      " 20%|██        | 1/5 [05:15<21:02, 315.69s/it]\n",
       "  0%|          | 0/16 [00:00<?, ?it/s]\u001b[A\n",
-      "  6%|▋         | 1/16 [00:14<03:40, 14.70s/it]\u001b[A\n",
-      " 12%|█▎        | 2/16 [00:29<03:27, 14.80s/it]\u001b[A\n",
-      " 19%|█▉        | 3/16 [00:44<03:12, 14.81s/it]\u001b[A\n",
-      " 25%|██▌       | 4/16 [00:57<02:52, 14.41s/it]\u001b[A\n",
-      " 31%|███▏      | 5/16 [01:10<02:36, 14.19s/it]\u001b[A\n",
-      " 38%|███▊      | 6/16 [01:25<02:22, 14.25s/it]\u001b[A\n",
-      " 44%|████▍     | 7/16 [01:40<02:08, 14.32s/it]\u001b[A\n",
-      " 50%|█████     | 8/16 [01:55<01:55, 14.38s/it]\u001b[A\n",
-      " 56%|█████▋    | 9/16 [02:09<01:40, 14.42s/it]\u001b[A\n",
-      " 62%|██████▎   | 10/16 [02:24<01:26, 14.47s/it]\u001b[A\n",
-      " 69%|██████▉   | 11/16 [02:39<01:12, 14.48s/it]\u001b[A\n",
-      " 75%|███████▌  | 12/16 [02:54<00:58, 14.51s/it]\u001b[A\n",
-      " 81%|████████▏ | 13/16 [03:07<00:43, 14.46s/it]\u001b[A\n",
-      " 88%|████████▊ | 14/16 [03:25<00:29, 14.70s/it]\u001b[A\n",
-      " 94%|█████████▍| 15/16 [03:44<00:14, 14.94s/it]\u001b[A\n",
-      "100%|██████████| 16/16 [04:01<00:00, 15.11s/it]\u001b[A\n",
-      " 60%|██████    | 3/5 [13:55<09:17, 278.53s/it]\n",
+      "  6%|▋         | 1/16 [00:16<04:02, 16.14s/it]\u001b[A\n",
+      " 12%|█▎        | 2/16 [00:31<03:42, 15.90s/it]\u001b[A\n",
+      " 19%|█▉        | 3/16 [00:47<03:25, 15.82s/it]\u001b[A\n",
+      " 25%|██▌       | 4/16 [01:03<03:09, 15.79s/it]\u001b[A\n",
+      " 31%|███▏      | 5/16 [01:18<02:53, 15.79s/it]\u001b[A\n",
+      " 38%|███▊      | 6/16 [01:34<02:37, 15.79s/it]\u001b[A\n",
+      " 44%|████▍     | 7/16 [01:50<02:22, 15.78s/it]\u001b[A\n",
+      " 50%|█████     | 8/16 [02:06<02:06, 15.79s/it]\u001b[A\n",
+      " 56%|█████▋    | 9/16 [02:22<01:50, 15.79s/it]\u001b[A\n",
+      " 62%|██████▎   | 10/16 [02:37<01:34, 15.79s/it]\u001b[A\n",
+      " 69%|██████▉   | 11/16 [02:53<01:18, 15.80s/it]\u001b[A\n",
+      " 75%|███████▌  | 12/16 [03:09<01:03, 15.80s/it]\u001b[A\n",
+      " 81%|████████▏ | 13/16 [03:25<00:47, 15.80s/it]\u001b[A\n",
+      " 88%|████████▊ | 14/16 [03:41<00:31, 15.80s/it]\u001b[A\n",
+      " 94%|█████████▍| 15/16 [03:56<00:15, 15.80s/it]\u001b[A\n",
+      "100%|██████████| 16/16 [04:12<00:00, 15.81s/it]\u001b[A\n",
+      " 40%|████      | 2/5 [10:35<15:53, 317.88s/it]\n",
       "  0%|          | 0/16 [00:00<?, ?it/s]\u001b[A\n",
-      "  6%|▋         | 1/16 [00:15<03:47, 15.19s/it]\u001b[A\n",
-      " 12%|█▎        | 2/16 [00:30<03:31, 15.09s/it]\u001b[A\n",
-      " 19%|█▉        | 3/16 [00:45<03:16, 15.15s/it]\u001b[A\n",
-      " 25%|██▌       | 4/16 [01:00<03:00, 15.02s/it]\u001b[A\n",
-      " 31%|███▏      | 5/16 [01:12<02:39, 14.47s/it]\u001b[A\n",
-      " 38%|███▊      | 6/16 [01:27<02:26, 14.65s/it]\u001b[A\n",
-      " 44%|████▍     | 7/16 [01:46<02:16, 15.15s/it]\u001b[A\n",
-      " 50%|█████     | 8/16 [02:04<02:04, 15.52s/it]\u001b[A\n",
-      " 56%|█████▋    | 9/16 [02:22<01:50, 15.83s/it]\u001b[A\n",
-      " 62%|██████▎   | 10/16 [02:40<01:36, 16.01s/it]\u001b[A\n",
-      " 69%|██████▉   | 11/16 [02:58<01:21, 16.25s/it]\u001b[A\n",
-      " 75%|███████▌  | 12/16 [03:16<01:05, 16.39s/it]\u001b[A\n",
-      " 81%|████████▏ | 13/16 [03:34<00:49, 16.52s/it]\u001b[A\n",
-      " 88%|████████▊ | 14/16 [03:52<00:33, 16.63s/it]\u001b[A\n",
-      " 94%|█████████▍| 15/16 [04:10<00:16, 16.73s/it]\u001b[A\n",
-      "100%|██████████| 16/16 [04:29<00:00, 16.82s/it]\u001b[A\n",
-      " 80%|████████  | 4/5 [19:01<04:45, 285.47s/it]\n",
-      "  0%|          | 0/16 [00:00<?, ?it/s]\u001b[A\n",
-      "  6%|▋         | 1/16 [00:18<04:33, 18.26s/it]\u001b[A\n",
-      " 12%|█▎        | 2/16 [00:36<04:18, 18.47s/it]\u001b[A\n",
-      " 19%|█▉        | 3/16 [00:55<03:59, 18.41s/it]\u001b[A\n",
-      " 25%|██▌       | 4/16 [01:13<03:39, 18.28s/it]\u001b[A\n",
-      " 31%|███▏      | 5/16 [01:31<03:20, 18.23s/it]\u001b[A\n",
-      " 38%|███▊      | 6/16 [01:49<03:01, 18.19s/it]\u001b[A\n",
-      " 44%|████▍     | 7/16 [02:07<02:43, 18.21s/it]\u001b[A\n",
-      " 50%|█████     | 8/16 [02:24<02:24, 18.12s/it]\u001b[A\n",
-      " 56%|█████▋    | 9/16 [02:39<02:04, 17.74s/it]\u001b[A\n",
-      " 62%|██████▎   | 10/16 [02:57<01:46, 17.77s/it]\u001b[A\n",
-      " 69%|██████▉   | 11/16 [03:15<01:29, 17.80s/it]\u001b[A\n",
-      " 75%|███████▌  | 12/16 [03:33<01:11, 17.81s/it]\u001b[A\n",
-      " 81%|████████▏ | 13/16 [03:51<00:53, 17.80s/it]\u001b[A\n",
-      " 88%|████████▊ | 14/16 [04:09<00:35, 17.81s/it]\u001b[A\n",
-      " 94%|█████████▍| 15/16 [04:26<00:17, 17.80s/it]\u001b[A\n",
-      "100%|██████████| 16/16 [04:44<00:00, 17.80s/it]\u001b[A\n",
-      "100%|██████████| 5/5 [24:25<00:00, 293.17s/it]\n"
+      "  6%|▋         | 1/16 [00:15<03:55, 15.68s/it]\u001b[A\n",
+      " 12%|█▎        | 2/16 [00:31<03:39, 15.68s/it]\u001b[A\n",
+      " 19%|█▉        | 3/16 [00:46<03:22, 15.58s/it]\u001b[A\n",
+      " 25%|██▌       | 4/16 [01:02<03:07, 15.62s/it]\u001b[A\n",
+      " 31%|███▏      | 5/16 [01:18<02:52, 15.65s/it]\u001b[A\n",
+      " 38%|███▊      | 6/16 [01:33<02:36, 15.67s/it]\u001b[A\n",
+      " 44%|████▍     | 7/16 [01:49<02:21, 15.68s/it]\u001b[A\n",
+      " 50%|█████     | 8/16 [02:05<02:05, 15.71s/it]\u001b[A\n",
+      " 56%|█████▋    | 9/16 [02:21<01:50, 15.73s/it]\u001b[A\n",
+      " 62%|██████▎   | 10/16 [02:37<01:34, 15.74s/it]\u001b[A\n",
+      " 69%|██████▉   | 11/16 [02:53<01:18, 15.74s/it]\u001b[A\n",
+      " 75%|███████▌  | 12/16 [03:09<01:03, 15.75s/it]\u001b[A\n",
+      " 81%|████████▏ | 13/16 [03:24<00:47, 15.74s/it]\u001b[A\n",
+      " 88%|████████▊ | 14/16 [03:40<00:31, 15.74s/it]\u001b[A\n",
+      " 94%|█████████▍| 15/16 [03:56<00:15, 15.75s/it]\u001b[A\n",
+      "100%|██████████| 16/16 [04:12<00:00, 15.75s/it]\u001b[A\n",
+      " 60%|██████    | 3/5 [15:54<10:36, 318.05s/it]\n"
+     ]
+    },
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'experiments/deeb6bb3-7c65-47b8-92d0-53737d47d983/weights/4_fold.pth'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-781a849c178c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0minference\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconfig\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mconfig\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkf\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mkf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mall_data_dict\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mall_data_dict\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/code/PointCloudResNet/utils/inference.py\u001b[0m in \u001b[0;36minference\u001b[0;34m(config, all_data_dict, kf, num_votes, repeat)\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m             \u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbuild_multi_part_segmentation\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconfig\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mconfig\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 27\u001b[0;31m             \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_state_dict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'experiments/{config.EXP_NAME}/weights/{e + 1}_fold.pth'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     28\u001b[0m             \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0meval\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m             \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcuda\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/torch/serialization.py\u001b[0m in \u001b[0;36mload\u001b[0;34m(f, map_location, pickle_module, **pickle_load_args)\u001b[0m\n\u001b[1;32m    577\u001b[0m         \u001b[0mpickle_load_args\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'encoding'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'utf-8'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    578\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 579\u001b[0;31m     \u001b[0;32mwith\u001b[0m \u001b[0m_open_file_like\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'rb'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mopened_file\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    580\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0m_is_zipfile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mopened_file\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    581\u001b[0m             \u001b[0;31m# The zipfile reader is going to advance the current file position.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/torch/serialization.py\u001b[0m in \u001b[0;36m_open_file_like\u001b[0;34m(name_or_buffer, mode)\u001b[0m\n\u001b[1;32m    228\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0m_open_file_like\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname_or_buffer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    229\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0m_is_path\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname_or_buffer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 230\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0m_open_file\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname_or_buffer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    231\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    232\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;34m'w'\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/torch/serialization.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, name, mode)\u001b[0m\n\u001b[1;32m    209\u001b[0m \u001b[0;32mclass\u001b[0m \u001b[0m_open_file\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0m_opener\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    210\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 211\u001b[0;31m         \u001b[0msuper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0m_open_file\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    212\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    213\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__exit__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'experiments/deeb6bb3-7c65-47b8-92d0-53737d47d983/weights/4_fold.pth'"
      ]
     }
    ],
    "source": [
     "inference(config=config, kf=kf, all_data_dict=all_data_dict)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "583272b2-5844-489e-aa7c-144de972fb5b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
