--- a/run_pc_visualization.ipynb
+++ b/run_pc_visualization.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,11 +30,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "EXP_NAME = '1b5fabcd-9b11-4188-b193-1e0c052ba0f4'\n",
+    "EXP_NAME = '16ac4d6a-13b7-41c2-9155-919abc4d61f0'\n",
     "\n",
     "with open(f'experiments/{EXP_NAME}/config.json') as json_file:\n",
     "    config = json.load(json_file)\n",
@@ -53,16 +53,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/81 [00:00<?, ?it/s]/usr/local/lib/python3.6/dist-packages/traittypes/traittypes.py:101: UserWarning: Given trait value dtype \"float64\" does not match required type \"float32\". A coerced copy has been created.\n",
+      "  0%|          | 0/80 [00:00<?, ?it/s]/usr/local/lib/python3.6/dist-packages/traittypes/traittypes.py:101: UserWarning: Given trait value dtype \"float64\" does not match required type \"float32\". A coerced copy has been created.\n",
       "  np.dtype(self.dtype).name))\n",
-      "100%|██████████| 81/81 [03:15<00:00,  2.41s/it]\n"
+      " 51%|█████▏    | 41/80 [01:19<01:16,  1.95s/it]"
      ]
     }
    ],
@@ -79,19 +79,20 @@
     "\n",
     "    coordinates = coordinates*(1-air_maks[:, None]).astype(np.float32)\n",
     "    predictions = predictions*(1-air_maks)\n",
-    "    predictions = (predictions > 0.5).astype(np.float32)\n",
+    "    predictions = (predictions > 0.9).astype(np.float32)\n",
     "    labels = labels*(1-air_maks)\n",
     "    tp = np.logical_and(labels, predictions)\n",
+    "    fp = np.logical_and(1-labels, predictions)\n",
+    "    fn = np.logical_and(labels, 1-predictions)\n",
     "    \n",
-    "    pred_colors = np.zeros(len(predictions))\n",
-    "\n",
-    "    pred_colors = [0xFFFF00 if (labels[i] == 1) else x for i, x in enumerate(pred_colors)]\n",
-    "    pred_colors = [0xFF9900 if (predictions[i] == 1) else x for i, x in enumerate(pred_colors)]\n",
-    "    pred_colors = [0x00FF00 if (tp[i] == 1) else x for i, x in enumerate(pred_colors)]\n",
-    "    pred_colors = [0xCCCCCC if (x == 0) else x for i, x in enumerate(pred_colors)]\n",
+    "    pred_colors = np.array([0xCCCCCC for _ in range(len(predictions))])\n",
+    "    \n",
+    "    pred_colors = [0x00FF00 if tp[i] else x for i, x in enumerate(pred_colors)]\n",
+    "    pred_colors = [0xFF9900 if fp[i] else x for i, x in enumerate(pred_colors)]\n",
+    "    pred_colors = [0xFF0000 if fn[i] else x for i, x in enumerate(pred_colors)]\n",
     "\n",
     "    opacities = [0.5 if (x == 0xCCCCCC) else 1 for x in pred_colors]\n",
-    "    point_sizes = [1 if (x == 0x00FF00) else 0.5 for x in pred_colors]\n",
+    "    point_sizes = [1 if (x == 0x00FF00 or x == 0xFF0000) else 0.5 for x in pred_colors]\n",
     "    \n",
     "    \n",
     "    plot = k3d.plot(name='points')\n",
@@ -105,6 +106,13 @@
     "    with open(f'experiments/{EXP_NAME}/visualizations/{subject}.html', 'w') as f:\n",
     "        f.write(plot.get_snapshot(9))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
