pipeline was changed

--- a/run_pc_interpolation.ipynb
+++ b/run_pc_interpolation.ipynb
@@ -13,10 +13,22 @@
    "execution_count": 1,
    "id": "7461a8bb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.6/dist-packages/nilearn/__init__.py:69: FutureWarning: Python 3.6 support is deprecated and will be removed in release 0.10 of Nilearn. Consider switching to Python 3.8 or 3.9.\n",
+      "  _python_deprecation_warnings()\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import sys\n",
+    "import glob\n",
+    "import nilearn\n",
+    "from nilearn import image\n",
     "sys.path.append(\"..\")\n",
     "\n",
     "import json\n",
@@ -41,14 +53,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "EXP_NAME = '16ac4d6a-13b7-41c2-9155-919abc4d61f0'\n",
+    "EXP_NAME = '2022-03-18_experiment_a7431019-46fe-478c-83a5-ef394784f7fa'\n",
     "\n",
     "with open(f'experiments/{EXP_NAME}/config.json') as json_file:\n",
     "    config = json.load(json_file)\n",
     "    \n",
     "config = edict(config)\n",
     "\n",
-    "os.makedirs(f'experiments/{EXP_NAME}/interpolation')"
+    "os.makedirs(f'experiments/{EXP_NAME}/interpolation', exist_ok=True)"
    ]
   },
   {
@@ -69,31 +81,27 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 72%|███████▎  | 58/80 [1:31:52<34:50, 95.04s/it]  "
+      " 95%|█████████▌| 125/131 [3:41:39<10:38, 106.40s/it] "
      ]
     }
    ],
    "source": [
     "for subject in tqdm(config.subjects):\n",
     "    \n",
-    "    with open(f'experiments/{EXP_NAME}/predictions/{subject}.json') as json_file:\n",
+    "    with open(f'experiments/{config.name_of_experiment}/predictions/{subject}.json') as json_file:\n",
     "        net_output = json.load(json_file)\n",
     "    \n",
     "    coordinates, predictions = net_output['coordinates'], net_output['predictions']\n",
     "    result = points2mri(coordinates, predictions)\n",
     "    \n",
-    "    original_brain = nib.load(f\"{config.path_to_data}/{config.BRAIN_MODALITY}_brains/{subject}.nii\")\n",
-    "    interpolation = nib.Nifti1Image(result, original_brain.affine)\n",
-    "    nib.save(interpolation, f\"experiments/{EXP_NAME}/interpolation/{subject}.nii\")"
+    "    original_brain = nib.load(f\"{config.path_to_data}/{config.brains_modality}_brains/{subject}.nii.gz\")\n",
+    "    brain_mask = nib.load(f'radiologist/preprocessed_data/new_pipeline/sub-{subject}/sub-{subject}_acq-T1Mprage_space-MNI152NLint2_seq-T1w_brain.nii_mask.nii.gz')\n",
+    "    brain_mask = nilearn.image.resample_to_img(brain_mask, original_brain, interpolation='nearest')\n",
+    "    \n",
+    "    pred = result * brain_mask.get_fdata()\n",
+    "    interpolation = nib.Nifti1Image(pred, original_brain.affine)\n",
+    "    nib.save(interpolation, f\"experiments/{config.name_of_experiment}/interpolation/{subject}.nii.gz\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0dd8568a-edf3-4b7b-97be-b1582525074c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
