--- a/run_pc_visualization.ipynb
+++ b/run_pc_visualization.ipynb
@@ -30,18 +30,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "EXP_NAME = '16ac4d6a-13b7-41c2-9155-919abc4d61f0'\n",
+    "EXP_NAME = '108364b8-aad7-4c4d-b093-4a69a49ececc'\n",
     "\n",
     "with open(f'experiments/{EXP_NAME}/config.json') as json_file:\n",
     "    config = json.load(json_file)\n",
     "\n",
     "config = edict(config)\n",
     "\n",
-    "os.makedirs(f'experiments/{EXP_NAME}/visualizations')"
+    "os.makedirs(f'experiments/{EXP_NAME}/visualizations', exist_ok=True)"
    ]
   },
   {
@@ -53,21 +53,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|          | 0/80 [00:00<?, ?it/s]/usr/local/lib/python3.6/dist-packages/traittypes/traittypes.py:101: UserWarning: Given trait value dtype \"float64\" does not match required type \"float32\". A coerced copy has been created.\n",
-      "  np.dtype(self.dtype).name))\n",
-      " 51%|█████▏    | 41/80 [01:19<01:16,  1.95s/it]"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for subject in tqdm(config.subjects):\n",
+    "for subject in ['4']:#tqdm(config.subjects):\n",
     "    \n",
     "    with open(f'experiments/{EXP_NAME}/predictions/{subject}.json') as json_file:\n",
     "        net_output = json.load(json_file)\n",
@@ -79,7 +69,7 @@
     "\n",
     "    coordinates = coordinates*(1-air_maks[:, None]).astype(np.float32)\n",
     "    predictions = predictions*(1-air_maks)\n",
-    "    predictions = (predictions > 0.9).astype(np.float32)\n",
+    "    predictions = (predictions > 0.8).astype(np.float32)\n",
     "    labels = labels*(1-air_maks)\n",
     "    tp = np.logical_and(labels, predictions)\n",
     "    fp = np.logical_and(1-labels, predictions)\n",
@@ -87,12 +77,16 @@
     "    \n",
     "    pred_colors = np.array([0xCCCCCC for _ in range(len(predictions))])\n",
     "    \n",
-    "    pred_colors = [0x00FF00 if tp[i] else x for i, x in enumerate(pred_colors)]\n",
-    "    pred_colors = [0xFF9900 if fp[i] else x for i, x in enumerate(pred_colors)]\n",
-    "    pred_colors = [0xFF0000 if fn[i] else x for i, x in enumerate(pred_colors)]\n",
+    "#     pred_colors = [0x00FF00 if tp[i] else x for i, x in enumerate(pred_colors)]\n",
+    "#     pred_colors = [0xFF9900 if fp[i] else x for i, x in enumerate(pred_colors)]\n",
+    "#     pred_colors = [0xFF0000 if fn[i] else x for i, x in enumerate(pred_colors)]\n",
     "\n",
-    "    opacities = [0.5 if (x == 0xCCCCCC) else 1 for x in pred_colors]\n",
-    "    point_sizes = [1 if (x == 0x00FF00 or x == 0xFF0000) else 0.5 for x in pred_colors]\n",
+    "\n",
+    "\n",
+    "    #opacities = [0.5 if (x == 0xCCCCCC) else 1 for x in pred_colors]\n",
+    "    #point_sizes = [1 if (x == 0x00FF00 or x == 0xFF0000) else 0.5 for x in pred_colors]\n",
+    "    opacities = [1 if (x == 0xCCCCCC) else 1 for x in pred_colors]\n",
+    "    point_sizes = [1 if (x == 0x00FF00 or x == 0xFF0000) else 1 for x in pred_colors]\n",
     "    \n",
     "    \n",
     "    plot = k3d.plot(name='points')\n",
